--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake In The City</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <div class="container">
-        <div id="board"></div>
+        <!-- <img src="Images/bg.jpg" alt="" id="bg"> -->
+        <div id="board">
+          
+        </div>
     </div>
 </body>
 <script src="js/script.js"></script>
