all logical part completed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <div id="board">
           
         </div>
+        <div class="info">
+            <h1 id="username">Player Name: </h1>
+            <h1 id="score">Score: </h1>
+            <h1 id="highest-score">Highest Score: </h1>
+        </div>
     </div>
 </body>
 <script src="js/script.js"></script>
