almost everything completed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <h1 id="highest-score">Highest Score: </h1>
         </div>
     </div>
+    <footer>
+        <p id="attributes">Coded by <a href="https://www.linkedin.com/in/rahul-rajbhandari-290876284">@rahulrajbhandari</a></p>
+    </footer>
 </body>
 <script src="js/script.js"></script>
 </html>
