buttons replaced by swipe guestures

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <!-- <img src="Images/bg.jpg" alt="" id="bg"> -->
         <div id="board"></div>
         <div class="content">
+            <div id="touchpad">
+                <p>TOUCH PAD</p></div>
             <div id="info">
                 <h1 id="username">Player Name: </h1>
                 <h1 id="score">Score: </h1>
@@ -25,6 +27,7 @@
                 <button id="right">➡️</button>
                 <button id="down">⬇️</button>
             </div>
+            
         </div>
         <p id="attributes">Coded by <a href="https://www.linkedin.com/in/rahul-rajbhandari-290876284">@rahulrajbhandari</a></p>
     </div>
