--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <!-- <img src="Images/bg.jpg" alt="" id="bg"> -->
         <div id="board"></div>
         <div class="content">
-            <div id="touchpad">
-                <p>TOUCH PAD</p></div>
+            <!-- <div id="touchpad">
+                <p>TOUCH PAD</p></div> -->
             <div id="info">
                 <h1 id="username">Player Name: </h1>
                 <h1 id="score">Score: </h1>
