aba chai vayo yar

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
         <div class="content">
             <!-- <div id="touchpad">
                 <p>TOUCH PAD</p></div> -->
+                <div class="buttons">
+                    <button id="up">⬆️</button>
+                    <div class="horizontal-buttons">
+                        <button id="left">⬅️</button>
+                        <button id="right">➡️</button>
+                    </div>
+                    <button id="down">⬇️</button>
+                </div>
             <div id="info">
                 <h1 id="username">Player Name: </h1>
                 <h1 id="score">Score: </h1>
                 <h1 id="highest-score">Highest Score: </h1>
-            </div>
-            <div class="buttons">
-                <button id="left">⬅️</button>
-                <button id="up">⬆️</button>
-                <br>
-                <button id="right">➡️</button>
-                <button id="down">⬇️</button>
             </div>
             
         </div>
