final aba change hudaina

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="info">
                 <h1 id="username">Player Name: </h1>
                 <h1 id="score">Score: </h1>
-                <h1 id="highest-score">Highest Score: </h1>
+                <h1 id="highest-score">Highest Score: 00</h1>
             </div>
             
         </div>
