--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     
 </head>
 <body>
-    <h1 id="title">Snake Ghar</h1>
+    <nav>
+        <h1 id="title">Snake Ghar</h1>
+        <button id="music">Music:ON</button>
+    </nav>
     <div class="container">
         <!-- <img src="Images/bg.jpg" alt="" id="bg"> -->
         <div id="board"></div>
