--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake In The City</title>
     <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="icon" type="icon" href="Images/game.png">
 </head>
 <body>
     <nav>
